	 #1916457) (Gergely Szasz).
20080706 menu.[ch],menu_data.dat,tape.[ch]: add some detail text for the tape
         branch for the Widget UI ala FuseX (thanks, crabfists) (Fred).
20080715 PORTING: add document on what you can and cannot do with Fuse's code.
20080717 ui/win32/debugger.c: Win32: accommodation for the new event
	 architecture (Marek).
20080719 README,fuse.c: try and direct support requests to locations seen
	 by more people than just me.
20080721 ui/win32/{win32ui.c,error.c,Makefile.am}: Win32: Integrated
	 ui_error_specific into win32ui.c similarly to gtk ui (Marek).
20080721 ui/win32/{win32ui.c,memorybrowser.c,binary.c,debugger.c,win32display.c,
	 browse.c,picture.c,roms.c,pokefinder.c}: Win32: make functions and
	 variables static wherever applicable (Marek).
20080721 ui/win32/{win32ui.c,win32internals.h,confirm.c,Makefile.am}: Win32:
	 fixed confirmation dialog box and moved it to confirm.c similarly to
	 gtk ui (Marek).
20080721 compat/unix/file.c: Win32: applied a minor fix to compat_file_open for
	 Win32 (Marek).
20080721 disk/upd_fdc.c: allow EDSK images with large sector sizes to work
         (patch #2024218) (Gergely Szasz) (thanks, Simon Owen).
20080722 ui/win32/win32ui.c: Win32: implemented win32ui_make_menu and
	 ui_menu_item_set_active functions (Marek).
20080722 ui/win32/win32ui.c: Win32: Minor fixes to how reset menu and window
	 close event are handled (Marek).
20080723 menu_data.pl,ui/win32/{win32ui.c,debugger.c,win32internals.h,
	 win32display.c,win32display.h,picture.c,win32keyboard.c,options.pl,
	 Makefile.am,win32keyboard.h}: Win32: Refactored win32 ui code to
	 resemble gtk ui, applied minor fixes: fixed debugger's Break button,
	 added static wherever applicable to options*.pl, fixed compiler
	 warnings in ui_error_specific and win32ui_picture functions (Marek).
20080723 ui/win32/fileselector.c: Win32: Added fileselector.c to win32 ui as
	 part of refactoring the ui (Marek).